<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>4.0.2</version>
    </parent>

    <groupId>ws.spring</groupId>
    <artifactId>ws-springx</artifactId>
    <version>2.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>ws-springx</name>
    <description>基于spring开发的通用组件</description>

    <url>https://github.com/WindShadow-mo/ws-springx.git</url>
    <developers>
        <developer>
            <name>风的影子</name>
            <email>wsmtp@foxmail.com</email>
            <url>https://blog.windshadow.cn</url>
        </developer>
    </developers>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>WindShadow</name>
            <url>https://maven.pkg.github.com/WindShadow-mo/ws-springx</url>
        </repository>
    </distributionManagement>

    <modules>
        <module>ws-springx-parent</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <spring-boot.version>${project.parent.version}</spring-boot.version>
        <resource.delimiter>@</resource.delimiter>
    </properties>

    <build>
        <plugins>
            <plugin>
                <inherited>false</inherited>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
</project>